<resources>
    <string name="app_name">VasLibrary</string>
    <string name="ip">ip</string>
    <string name="dmc">dmc</string>
    <string name="id">id</string>
    <string name="getsettings">دریافت تنظیمات</string>
    <string name="uknownerror">خطای ناشناس</string>
    <string name="error">خطا</string>
    <string name="customer_information_sent_cant_edit">اطلاعات مشتری به سرور ارسال شده و قابل ویرایش نمی باشد.</string>
    <string name="customers_list">لیست مشتریان</string>
    <string name="address">آدرس</string>
    <string name="customer_name">نام مشتری</string>
    <string name="product_list">لیست کالا</string>
    <string name="customercardex">کاردکس مشتری</string>
    <string name="oldinvoicereport">خریدهای آخر</string>
    <string name="payment_report">گزارش دریافتی</string>
    <string name="chq_account_no"> شماره حساب</string>
    <string name="follow_no">شماره پیگیری</string>
    <string name="buy_summury">خلاصه خرید</string>
    <string name="product_sales_report">گزارش کالا</string>
    <string name="recieve_tour">دریافت تور</string>
    <string name="chq_account_name">صاحب حساب</string>
    <string name="chq_branch_code">کد شعبه</string>
    <string name="chq_branch_name">نام شعبه</string>
    <string name="bank_name">نام بانک</string>
    <string name="city_name">نام شهر</string>
    <string name="code_naghsh">کدنقش</string>
    <string name="chq_date">تاریخ چک</string>
    <string name="chq_no">شماره چک</string>
    <string name="cash_discount">تخفیف تسویه</string>
    <string name="pos">کارتخوان</string>
    <string name="cheque">چک</string>
    <string name="cash">نقد</string>
    <string name="product_code">کد کالا</string>
    <string name="product_name">نام کالا</string>
    <string name="request_qty">تعداد سفارش</string>
    <string name="request_amount">مبلغ سفارش</string>
    <string name="remain_amount">باقیمانده</string>
    <string name="bedamount">بدهکاری</string>
    <string name="besamount">بستانکاری</string>
    <string name="date">تاریخ</string>
    <string name="type">نوع سند</string>
    <string name="vouncherno">شماره سند</string>
    <string name="discount_amount">تخفیف</string>
    <string name="add_amount">اضافات</string>
    <string name="remain_amount_v">مانده باز فاکتور</string>
    <string name="invoice_amount">مبلغ فاکتور</string>
    <string name="invoice_date">تاریخ</string>
    <string name="invoice_no">شماره فاکتور</string>
    <string name="request_amount_sale">فروش</string>
    <string name="rep3013">گزارش بدهی مشتریان</string>
    <string name="customer_code">کد مشتری</string>
    <string name="cust_rem_amount_for_sales_office">بدهی دفتر فروش</string>
    <string name="cust_rem_amount_all">جمع بدهی مشتری</string>
    <string name="warehouse_qty">موجودی انبار</string>
    <string name="return_qty">تعداد برگشتی</string>
    <string name="product_unit_name">واحد سنجش</string>
    <string name="return_damaged_qty">برگشتی ضایعاتی</string>
    <string name="unit_price">فی</string>
    <string name="renew_qty">تجدید موجودی</string>
    <string name="return_intact_qty">برگشتی سالم</string>
    <string name="sold_qty">فروخته شده</string>
    <string name="remain_qty">باقیمانده</string>
    <string name="delivery_report">گزارش تحویل</string>
    <string name="total_order_amount">جمع مبلغ سفارش</string>
    <string name="total_return_amount">برگشتی سفارش</string>
    <string name="sell_return_amount">مبلغ برگشتی</string>
    <string name="total_invoice_amount">قابل پرداخت</string>
    <string name="warning">هشدار</string>
    <string name="by_this_action_customer_order_be_deleted">با انجام اين عمل سفارش مشتري حذف مي شود آيا مطمئن هستيد؟</string>
    <string name="total_invoice_discount">مبلغ تخفیف</string>
    <string name="bulk_product">کالای فله ای</string>
    <string name="sale_no">شماره فاکتور</string>
    <string name="pay_amount">پرداخت شده</string>
    <string name="rem_amount">مانده مشتری</string>
    <string name="sale_date">تاریخ فاکتور</string>
    <string name="total_amount">ارزش فاکتور</string>
    <string name="onhand_bigsmallqty">موجودی</string>
    <string name="cash_sum">جمع نقد</string>
    <string name="cheque_sum">جمع چک</string>
    <string name="return_sum">جمع برگشتی</string>
    <string name="receipt_sum">جمع رسید</string>
    <string name="pos_sum">جمع کارتخوان</string>
    <string name="peyment_sum">جمع پرداختی</string>
    <string name="total">جمع کل</string>
    <string name="zero">0</string>
    <string name="payment_discount_amount">جمع تخفیف تسویه</string>
    <string name="payment_cheque_sum">جمع چک</string>
    <string name="sale_sum">جمع فروش</string>
    <string name="cash_discount_sum">جمع تخفیف تسویه</string>
    <string name="cheque_count_sum">تعداد چک</string>
    <string name="return_report">گزارش برگشتی</string>
    <string name="return_report_amount">ارزش کل </string>
    <string name="return_qty_count">تعداد برگشتی</string>
    <string name="total_return">برگشتی کل</string>
    <string name="sales_report">گزارش فروش</string>
    <string name="operation_report">گزارش عملکرد</string>
    <string name="visitor_name_label">نام فروشنده :</string>
    <string name="Customer_black_label">وضعیت مشتری :</string>
    <string name="day_sum_order_label">جمع سفارش روز :</string>
    <string name="line_customers_label">مشتریان مسیر :</string>
    <string name="day_customer">مشتریان روز</string>
    <string name="all_customers">همه مشتریان</string>
    <string name="line_visited_customers_label">ویزیت شده :</string>
    <string name="refused_label">انصراف داده :</string>
    <string name="order_taked_label">سفارش گرفته:</string>
    <string name="customer_name_label">نام مشتری :</string>
    <string name="customer_level_lable">درجه مشتری : </string>
    <string name="customer_group_lable">گروه مشتری : </string>
    <string name="customer_code_label">کد مشتری :</string>
    <string name="store_name_label">نام فروشگاه :</string>
    <string name="telephone_label">تلفن :</string>
    <string name="mobile_label">موبایل :</string>
    <string name="mobile_label_supervisor">موبایل</string>
    <string name="national_id_label">کد ملی :</string>
    <string name="national_id_label_supervisor">کد ملی </string>
    <string name="adress_label">آدرس :</string>
    <string name="status_label">وضعیت :</string>
    <string name="order_sum_label">جمع سفارش :</string>
    <string name="dist_sum_label">تعداد توزیع</string>
    <string name="sum_deliverd_label">تعداد تحویل شده</string>
    <string name="sum_customers_label">تعداد مشتریان</string>
    <string name="sum_dist_rials_label">جمع ریالی توزیع</string>
    <string name="sum_delivered_rials_label">جمع ریالی تحویلی</string>
    <string name="sum_complete_returns_label">تعداد برگشت کامل</string>
    <string name="in_line_visited_count_label">تعداد ویزیت شده مسیر :</string>
    <string name="out_line_visited_count_label">تعداد ویزیت شده خارج از مسیر :</string>
    <string name="not_visited_count_label">تعداد عدم ویزیت :</string>
    <string name="not_ordered_label">تعداد عدم سفارش :</string>
    <string name="set_customer_location">ثبت موقعیت مشتری</string>
    <string name="order_preview">پیش نمایش سفارش</string>
    <string name="customer_edit">ویرایش مشتری</string>
    <string name="not_visit">عدم ویزیت</string>
    <string name="get_order">ثبت عملیات</string>
    <string name="edit_customer_label">ویرایش مشتری</string>
    <string name="non_visit">عدم ویزیت</string>
    <string name="send_customer_actions">ارسال عملیات مشتری</string>
    <string name="salesman_report">عملکرد فروشنده</string>
    <string name="receipt">رسید</string>
    <string name="customerInventoryReport">گزارش موجودی مشتری</string>
    <string name="delivered_qty_lablel">تعداد تحویل شده</string>
    <string name="delivered_qty_label">تعداد توزیع</string>
    <string name="dist_qty_label">تعداد توزیع</string>
    <string name="total_returned_qty_label">تعداد کل برگشتی </string>
    <string name="customers_qty_label">تعداد برگشت کامل</string>
    <string name="rials_delivered_sum_label">جمع ریالی تحویلی</string>
    <string name="rials_dist_sum_label">جمع ریالی توزیعی</string>
    <string name="frag_dist_return">ثبت برگشتی</string>
    <string name="frag_dist_preview">پیش نمایش</string>
    <string name="frag_dist_summary_cust_settlement">تسویه</string>
    <string name="save_operation">ثبت عملیات</string>
    <string name="non_certain_order">عدم قطعی کردن سفارش</string>
    <string name="non_order">عدم سفارش</string>
    <string name="certain_order">عدم قطعی کردن سفارش</string>
    <string name="complete_return">برگشت کامل</string>
    <string name="save_order">ثبت سفارش</string>
    <string name="order_cost">ارزش سفارش</string>
    <string name="not_delivered_cause">علت عدم تحویل:</string>
    <string name="pay_type">نحوه پرداخت:</string>
    <string name="comment">توضیحات</string>
    <string name="value">ارزش</string>
    <string name="return_unit">واحد برگشتی</string>
    <string name="unit">واحد</string>
    <string name="order_qty">تعداد سفارش</string>
    <string name="return_baste_qty">تعدا بسته بندی برگشتی</string>
    <string name="order_batse_qty">تعداد بسته بندی سفارش</string>
    <string name="payment_type">نحوه پرداخت</string>
    <string name="delivery_date">تاریخ تحویل</string>
    <string name="total_request_qty">تعداد کل سفارش</string>
    <string name="with_reference">با مبنا</string>
    <string name="without_reference">بدون مبنا</string>
    <string name="customer_tel_label">تلفن :</string>
    <string name="address_label">آدرس :</string>
    <string name="customer_inventory_label">موجودی مشتری :</string>
    <string name="average_old_factor_label">میانگین فروش :</string>
    <string name="price_label">فی :</string>
    <string name="total_price">قیمت کل :</string>
    <string name="user_price_label">قیمت: </string>
    <string name="total_ordered_qty_label">مجموع سفارش کالا :</string>
    <string name="store_inventory_label">موجودی انبار :</string>
    <string name="product_type_label">نوع کالا :</string>
    <string name="discounts_and_awards">تخفیفات و جوایز</string>
    <string name="customer_category">طبقه مشتری</string>
    <string name="customer_level">درجه مشتری</string>
    <string name="customer_activity">فعالیت مشتری</string>
    <string name="batch_numbers">سری ساخت</string>
    <string name="ready_to_send">آماده ارسال</string>
    <string name="sent">ارسال شده</string>
    <string name="receiving_information">در حال دریافت اطلاعات</string>
    <string name="received">دریافت شده</string>
    <string name="ended">خاتمه یافته</string>
    <string name="refused">انصراف داده</string>
    <string name="disabled">غیرفعال</string>
    <string name="customer_national_code_labl">کد ملی:</string>
    <string name="postal_code_label">کدپستی:</string>
    <string name="state">استان</string>
    <string name="ownership_type">نوع مالکیت</string>
    <string name="city_zone">منطقه شهرداری</string>
    <string name="without_reference_from_request">بی مبنا (عطف به درخواست)</string>
    <string name="with_reference_from_request">با مبنا (عطف به درخواست)</string>
    <string name="without_ref_replacement_registration">تعویضی بدون مبنا</string>
    <string name="with_ref_replacement_registration">تعویضی با مبنا</string>
    <string name="customer_economic_code">کد اقتصادی مشتری</string>
    <string name="invoice_count">تعداد دفعات خرید :</string>
    <string name="person_name_label">نام شخص</string>
    <string name="tablo_name_label">نام تابلو</string>
    <string name="street2_label">آدرس دوم</string>
    <string name="street3_label">آدرس سوم</string>
    <string name="street4_label">آدرس چهارم</string>
    <string name="street5_label">آدرس پنجم</string>
    <string name="delivery_zone">محدوه پخش</string>
    <string name="sale_zones">مناطق فروش</string>
    <string name="customer_group_1">گروه مشتری ۱</string>
    <string name="customer_group_2">گروه مشتری ۲</string>
    <string name="customer_degree">درجه مشتری</string>
</resources>